Revision history for Test-EOL

    - Fix misleading test failure diagnostics when only issue are
      trailing whitespaces
    - No longer blindly assume utf8 on input files (RT#59877)

0.9  2010-06-16
    - Fix warnings on very old perls (paul@city-fan.org)
      (Closes: RT#58442)

0.8  2010-06-11
    - Use binmode :raw for input/output. Solves win32 translating the
      \r\n character into \n's silently during input (Kent Fredric).
    - Add an ( currently undocumeted ) all_reasons option to show
      every line that is broken (Kent Fredric).
    - Add visualising of invisible characters that match the regex
      (Kent Fredric).

0.7  2010-03-03
    - Deal correctly with -I includes paths that include spaces in the
      tests to stop them unexpectedly failing.
    - Remove shelling out to the system rm command in the tests
      to avoid nasty warnings on Win32.
    - Remove warning from test diagnostics

0.6  2010-01-19
     - I'm so bad at this!  Fix another logic error that made all files fail
       when using trailing_whitespace option (fREW)

0.5  2010-01-19
     - Fix logic fail that made all filenames the same if a user uses the
       trailing_whitespace option (fREW)

0.4  2010-01-19
     - Add checks for trailing whitespace (fREW)

0.3  2009-07-18
     - Fix File::Find regex which I had broken.

0.2  2009-07-17
     - Pod corrections pointed out by daxim in #moose

0.1  2009-07-15
     - Module created and released on an unsuspecting world.
