@@ -1,9 +1,10 @@
 name    = Test-EOL
 version = 0.9
-author  = Tomas Doran <bobtfish@bobtfish.net>
 author  = Arthur Axel 'fREW' Schmidt <frioux@gmail.com>
-author  = Kent Fredric <kentfredric@gmail.com>
 author  = Florian Ragwitz <rafl@debian.org>
+author  = Kent Fredric <kentfredric@gmail.com>
+author  = Peter Rabbitson <ribasushi@cpan.org>
+author  = Tomas Doran <bobtfish@bobtfish.net>
 license = Perl_5
 copyright_holder = Tomas Doran
 
