@@ -3,6 +3,7 @@ Revision history for Test-EOL
     - Fix misleading test failure diagnostics when only issue are
       trailing whitespaces
     - No longer blindly assume utf8 on input files (RT#59877)
+    - Properly document testing options
 
 0.9  2010-06-16
     - Fix warnings on very old perls (paul@city-fan.org)
